# seed-phrase-recover-BTC-ETH

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  package.json
benches/: recovery_benchmark.rs
scripts/: build.js  setup.js
src/: bip39.rs  crypto.rs  index.js  lib.rs  main.rs  recovery.rs
tests/: integration_test.rs
web/: package.json
web/src/: app.js  index.html  styles.css
